--- a/WebSite/Views/Home/Index.cshtml
+++ b/WebSite/Views/Home/Index.cshtml
@@ -9,27 +9,19 @@
     <p>Real Estate Property Management System</p>
 </div>
 <br />
-<table class="table">
-    <thead>
-        <tr>
-            <th></th> 
-            <th>Nome</th>
-            <th>Tipo</th>
-            <th>Localização</th>
-            <th>Preço</th>
-            <th>Descrição</th>
-        </tr>
-    </thead>
+<table class="table">    
     <tbody>
         @foreach (var property in Model)
         {
             <tr>
-                <td><img src="https://picsum.photos/seed/@Guid.NewGuid()/150/150" alt="Imagem Aleatória" /></td> <!-- Imagem aleatória -->
-                <td>@property.Name</td>
-                <td>@property.Type</td>
-                <td>@property.Location</td>
-                <td>@property.Price</td>
-                <td>@property.Description</td>
+                <td style="width:340px;height:240px"><img src="https://picsum.photos/seed/@Guid.NewGuid()/340/280" alt="Imagem Aleatória" /></td> <!-- Imagem aleatória -->
+                <td>
+                    <span class="property-name">@property.Name</span>
+                    <span class="property-price">@property.Price<span class="property-price-currency">€</span></span>
+                    <span style="display: block;">@property.Type</span>
+                    <span style="display: block;">@property.Location</span>
+                    <span style="display: block;">@property.Description</span>
+                </td>                                
             </tr>
         }
     </tbody>
