--- a/WebSite/Views/Property/Create.cshtml
+++ b/WebSite/Views/Property/Create.cshtml
@@ -25,7 +25,7 @@
         <input type="text" id="Location" name="Location" class="form-control" />
     </div>
     <div class="form-group">
-        <label for="Price">Preço:</label>
+        <label for="Price">Preço (Em euros):</label>
         <input type="text" id="Price" name="Price" class="form-control" />
     </div>
     <div class="form-group">
