--- a/WebSite/wwwroot/css/site.css
+++ b/WebSite/wwwroot/css/site.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
@@ -14,7 +14,8 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    font-family: 'bernino-regular',Verdana,Arial,Geneva,sans-serif;
 }
 
 /* Estilos para o formulário de criação de propriedade */
@@ -45,4 +46,32 @@ button[type="submit"] {
 
 textarea{
     resize:none;
+}
+
+.property-name {
+    display: block;
+    cursor: pointer;
+    color: #145bc7;
+    font-size: 21px;
+}
+
+.property-name:hover {
+    text-decoration: underline;
+}
+
+.property-price {
+    display: block;
+    color: black;
+    font-size: 23px;
+    font-weight: bold;
+}
+
+
+.property-price-currency {
+    display: inline;
+    color: black;
+    font-size: 14px;
+    font-weight:normal;
+    vertical-align: middle;
+    padding-left:5px;
 }
