--- a/WebSite/Views/Shared/_Layout.cshtml
+++ b/WebSite/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Property" asp-action="Create">Registar imóvel</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Inquiry" asp-action="List">Pedidos de contacto</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Logout">Terminar sessão</a>
                             </li>
                         }
