--- a/WebSite/Views/Inquiry/List.cshtml
+++ b/WebSite/Views/Inquiry/List.cshtml
@@ -1,40 +1,42 @@
 ﻿@model List<Inquiry>
 
 @{
-    ViewData["Title"] = "Pedidos de contacto";
+    ViewData["Title"] = "Pedidos de Contacto";
 }
 
-<div class="text-center">
-    <h1>@ViewData["Title"]</h1>
-</div>
+<div class="container mt-5">
+    <div class="text-center">
+        <h1>@ViewData["Title"]</h1>
+    </div>
 
-<br />
-
-@if (Model.Count > 0)
-{
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Nome</th>
-                <th>Email</th>
-                <th>Mensagem</th>
-                <th>Data</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var inquiry in Model)
+    <div class="row mt-4">
+        <div class="col">
+            @if (Model.Count > 0)
             {
-                <tr>
-                    <td>@inquiry.Name</td>
-                    <td>@inquiry.Email</td>
-                    <td>@inquiry.Message</td>
-                    <td>@inquiry.Date.ToString("dd/MM/yyyy HH:mm")</td>
-                </tr>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Data</th>
+                            <th>Pessoa de contacto</th>
+                            <th>Mensagem</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var inquiry in Model)
+                        {
+                            <tr>
+                                <td>@inquiry.Date.ToString("dd/MM/yyyy HH:mm")</td>
+                                <td><b>@inquiry.Name</b><br /><i>@inquiry.Email</i></td>
+                                <td>@inquiry.Message</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
             }
-        </tbody>
-    </table>
-}
-else
-{
-    <p>Nenhum pedido de contacto encontrado.</p>
-}
+            else
+            {
+                <p class="text-center">Nenhum pedido de contacto encontrado.</p>
+            }
+        </div>
+    </div>
+</div>
