--- a/WebSite/Views/Property/Create.cshtml
+++ b/WebSite/Views/Property/Create.cshtml
@@ -9,29 +9,33 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 
-<h1>Criar Novo Imóvel</h1>
-
-<form method="post">
-    <div class="form-group">
-        <label for="Name">Nome:</label>
-        <input type="text" id="Name" name="Name" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label for="Type">Tipo:</label>
-        <input type="text" id="Type" name="Type" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label for="Location">Localização:</label>
-        <input type="text" id="Location" name="Location" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label for="Price">Preço (Em euros):</label>
-        <input type="text" id="Price" name="Price" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label for="Description">Descrição:</label>
-        <textarea id="Description" name="Description" class="form-control" style="height: 150px;"></textarea>
+<div class="container mt-5">
+    <div class="text-center">
+        <h1>Criar Novo Imóvel</h1>
     </div>
 
-    <button type="submit" class="btn btn-primary">Criar Imóvel</button>
-</form>
+    <form method="post">
+        <div class="form-group">
+            <label for="Name">Nome:</label>
+            <input type="text" id="Name" name="Name" class="form-control" />
+        </div>
+        <div class="form-group">
+            <label for="Type">Tipo:</label>
+            <input type="text" id="Type" name="Type" class="form-control" />
+        </div>
+        <div class="form-group">
+            <label for="Location">Localização:</label>
+            <input type="text" id="Location" name="Location" class="form-control" />
+        </div>
+        <div class="form-group">
+            <label for="Price">Preço (Em euros):</label>
+            <input type="text" id="Price" name="Price" class="form-control" oninput="this.value = this.value.replace(/[^0-9]/g, '');" />
+        </div>
+        <div class="form-group">
+            <label for="Description">Descrição:</label>
+            <textarea id="Description" name="Description" class="form-control" style="height: 150px;"></textarea>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Criar Imóvel</button>
+    </form>
+</div>
