--- a/WebSite/Views/Shared/_Layout.cshtml
+++ b/WebSite/Views/Shared/_Layout.cshtml
@@ -33,6 +33,10 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Logout">Terminar sessão</a>
                             </li>
+
+                            <li class="nav-item ms-auto">
+                                <span class="nav-link text-dark">Olá, @User.Identity.Name</span>
+                            </li>
                         }
                         else
                         {
