Generate Fake Data for first use
- Generate Fake Properties
- Generate Fake Inquiries
- If dont exist information system auto generate fake data

--- a/WebSite/Views/Home/Privacy.cshtml
+++ b/WebSite/Views/Home/Privacy.cshtml
@@ -49,7 +49,7 @@
         <p>Utilizamos anúncios para compensar os custos de funcionamento deste site e fornecer financiamento para futuros desenvolvimentos. Os cookies de publicidade comportamental usados ​​por este site foram projetados para garantir que você forneça os anúncios mais relevantes sempre que possível, rastreando anonimamente seus interesses e apresentando coisas semelhantes que possam ser do seu interesse.</p>
         <p>Vários parceiros anunciam em nosso nome e os cookies de rastreamento de afiliados simplesmente nos permitem ver se nossos clientes acessaram o site através de um dos sites de nossos parceiros, para que possamos creditá-los adequadamente e, quando aplicável, permitir que nossos parceiros afiliados ofereçam qualquer promoção que pode fornecê-lo para fazer uma compra.</p>
 
-        <h2>Compromisso do Usuário</h2>
+        <h2>Compromisso do utilizador</h2>
         <p>O usuário se compromete a fazer uso adequado dos conteúdos e da informação que o Infinitimo oferece no site e com caráter enunciativo, mas não limitativo:</p>
         <ul>
             <li>Não se envolver em atividades que sejam ilegais ou contrárias à boa fé a à ordem pública;</li>
