--- a/WebSite/Views/Inquiry/List.cshtml
+++ b/WebSite/Views/Inquiry/List.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<Inquiry>
 
 @{
-    ViewData["Title"] = "Pedidos de Contacto";
+    ViewData["Title"] = "Pedidos de contacto";
 }
 
 <div class="container mt-5">
