--- a/WebSite/Areas/Identity/Pages/Account/Login.cshtml
+++ b/WebSite/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,11 +6,12 @@
 }
 
 <h1>@ViewData["Title"]</h1>
+
 <div class="row">
     <div class="col-md-6">
         <section>
             <form id="account" method="post">
-                <h3>Insira as suas credenciais de acesso.</h3>
+                <span style="font-size:19px">Insira as suas credenciais de acesso.</span>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-floating">
