--- a/WebSite/Views/Home/Index.cshtml
+++ b/WebSite/Views/Home/Index.cshtml
@@ -1,11 +1,16 @@
 ﻿@model List<Property>
 
 @{
-    ViewData["Title"] = "Lista de Propriedades";
+    ViewData["Title"] = Model.Count.ToString() + " imóveis na sua localização. Aproveite.";
 }
 
+
+
 <div class="text-center">
-    <h1>@ViewData["Title"]</h1>
+    <h1>InfinitIMO</h1>
+    <span>Real Estate Property Management System</span>
+    <img style="padding-top:20px" src="~/Assets/Images/banner.jpg" />
+    <h1 style="font-size:26px; padding-top:60px; padding-bottom:60px">@ViewData["Title"]</h1>
 </div>
 
 <br />
@@ -23,26 +28,31 @@
                     "Assets/Images/2.jpg",
                     "Assets/Images/3.jpg",
                     "Assets/Images/4.jpg",
-                    "Assets/Images/5.jpg"
+                    "Assets/Images/5.jpg",
+                    "Assets/Images/6.jpg",
+                    "Assets/Images/7.jpg",
+                    "Assets/Images/8.jpg",
+                    "Assets/Images/9.jpg",
+                    "Assets/Images/10.jpg"
                 };
             }
 
             @foreach (var property in Model)
             {
                 <tr>
-                    <td style="width: 340px; height: 240px">
+                    <td style="width: 340px; height: 240px;">
                         @{
                             var randomIndex = new Random().Next(0, imageUrls.Length);
                             var randomImageUrl = imageUrls[randomIndex];
                         }
                         <img style="width:340px; height:240px" src="@randomImageUrl" alt="Imagem Aleatória" />
                     </td>
-                    <td style="padding-left: 40px">
+                    <td style="padding-left: 40px; padding-bottom:40px">
                         <a href="@Url.Action("Detail", "Property", new { id = property.Id })" class="property-name">@property.Name</a>
                         <span class="property-price">@property.Price<span class="property-price-currency">€</span></span>
                         <span style="display: block; margin-bottom: 10px;">@property.Type</span>
                         <span style="display: block; margin-bottom: 10px;">@property.Location</span>
-                        <span style="display: block; margin-bottom: 10px;">@property.Description</span>
+                        <span style="display: block; margin-bottom: 10px;">@Html.Raw(@property.Description)</span>
                     </td>
                 </tr>
             }
