--- a/WebSite/Views/Property/Create.cshtml
+++ b/WebSite/Views/Property/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebSite.Models.Property
 
 @{
-    ViewData["Title"] = "Registar novo imóvel";
+    ViewData["Title"] = "Registar imóvel";
 }
 
 
@@ -11,28 +11,28 @@
 
 <div class="container mt-5">
     <div class="text-center">
-        <h1>Criar Novo Imóvel</h1>
+        <h1>Registar imóvel</h1>
     </div>
 
     <form method="post">
         <div class="form-group">
-            <label for="Name">Nome:</label>
+            <label for="Name">Nome</label>
             <input type="text" id="Name" name="Name" class="form-control" />
         </div>
         <div class="form-group">
-            <label for="Type">Tipo:</label>
+            <label for="Type">Tipo</label>
             <input type="text" id="Type" name="Type" class="form-control" />
         </div>
         <div class="form-group">
-            <label for="Location">Localização:</label>
+            <label for="Location">Localização</label>
             <input type="text" id="Location" name="Location" class="form-control" />
         </div>
         <div class="form-group">
-            <label for="Price">Preço (Em euros):</label>
+            <label for="Price">Preço</label>
             <input type="text" id="Price" name="Price" class="form-control" oninput="this.value = this.value.replace(/[^0-9]/g, '');" />
         </div>
         <div class="form-group">
-            <label for="Description">Descrição:</label>
+            <label for="Description">Descrição</label>
             <textarea id="Description" name="Description" class="form-control" style="height: 150px;"></textarea>
         </div>
 
