Add mandatory field validation
In the form for creating a new property, add validation of mandatory fields

--- a/WebSite/Views/Property/Detail.cshtml
+++ b/WebSite/Views/Property/Detail.cshtml
@@ -37,8 +37,8 @@
         <div style="margin-left: 20px; display: flex; text-align: right; flex-direction: column; justify-content: space-between;">            
             <form method="post" action="/Inquiry/Create">                
                 <input type="hidden" name="PropertyID" value="@Model.Id" />
-                <input type="text" name="Name" placeholder="Seu nome" style="width: 60%; margin-bottom: 10px;" />
-                <input type="text" name="Email" placeholder="Seu e-mail" style="width: 60%; margin-bottom: 10px;" />
+                <input type="text" name="Name" placeholder="Introduza o seu nome" style="width: 60%; margin-bottom: 10px;" />
+                <input type="text" name="Email" placeholder="Introduza o seu e-mail" style="width: 60%; margin-bottom: 10px;" />
                 <textarea placeholder="Mensagem" name="Message" rows="6" style="width: 60%;"></textarea>
                 <button type="submit" style="margin-top: 10px; width: 60%; margin-left: auto;">Pedir mais informações</button>
             </form>
