--- a/WebSite/Views/Property/Create.cshtml
+++ b/WebSite/Views/Property/Create.cshtml
@@ -18,22 +18,28 @@
         <div class="form-group">
             <label for="Name">Nome</label>
             <input type="text" id="Name" name="Name" class="form-control" />
+            <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label for="Type">Tipo</label>
             <input type="text" id="Type" name="Type" class="form-control" />
+            <span asp-validation-for="Type" class="text-danger"></span>
+
         </div>
         <div class="form-group">
             <label for="Location">Localização</label>
             <input type="text" id="Location" name="Location" class="form-control" />
+            <span asp-validation-for="Location" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label for="Price">Preço</label>
             <input type="text" id="Price" name="Price" class="form-control" oninput="this.value = this.value.replace(/[^0-9]/g, '');" />
+            <span asp-validation-for="Price" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label for="Description">Descrição</label>
             <textarea id="Description" name="Description" class="form-control" style="height: 150px;"></textarea>
+            <span asp-validation-for="Description" class="text-danger"></span>
         </div>
 
         <button type="submit" class="btn btn-primary">Criar Imóvel</button>
