Visual adjusts on Identity pages

--- a/WebSite/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/WebSite/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,17 +1,18 @@
 ﻿@page
 @model ForgotPasswordModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "Reset Password?";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
-<hr />
-<div class="row">
+<div class="d-flex justify-content-center align-items-center" style="min-height: 100vh;">
     <div class="col-md-4">
+        <h1 class="text-center">@ViewData["Title"]</h1>
+        <span style="font-size:19px">Introduza o seu email</span>
+        <hr />
+
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
+            <div class="form-floating" style="padding-bottom:30px">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
                 <label asp-for="Input.Email" class="form-label"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
