--- a/WebSite/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/WebSite/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -6,5 +6,5 @@
 
 <h1>@ViewData["Title"]</h1>
 <p>
-    Please check your email to reset your password.
+    Por favor verifique o seu email para efetuar o reset a sua password.
 </p>
