--- a/WebSite/Areas/Identity/Pages/Account/Login.cshtml
+++ b/WebSite/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Acesso reservado";
 }
 
-<h1>@ViewData["Title"]</h1>
-
-<div class="row">
+<div class="d-flex justify-content-center align-items-center" style="min-height: 100vh;">
     <div class="col-md-6">
+        <h1 class="text-center">@ViewData["Title"]</h1>
+
         <section>
             <form id="account" method="post">
                 <span style="font-size:19px">Insira as suas credenciais de acesso.</span>
@@ -48,7 +48,7 @@
                 </div>
             </form>
         </section>
-    </div>     
+    </div>
 </div>
 
 @section Scripts {
