--- a/WebSite/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/WebSite/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -1,22 +1,23 @@
 ﻿@page
 @model ResendEmailConfirmationModel
 @{
-    ViewData["Title"] = "Resend email confirmation";
+    ViewData["Title"] = "Reenviar email";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
-<hr />
-<div class="row">
+<div class="d-flex justify-content-center align-items-center" style="min-height: 100vh;">
     <div class="col-md-4">
+        <h1 class="text-center">@ViewData["Title"]</h1>
+        <span style="font-size:19px">Introduza o seu email</span>
+        <hr />
+
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-floating">
+            <div class="form-floating" style="padding-bottom: 30px">
                 <input asp-for="Input.Email" class="form-control" aria-required="true" />
                 <label asp-for="Input.Email" class="form-label"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Resend</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Reenviar email</button>
         </form>
     </div>
 </div>
